--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="logo-container">
       <img src="./img/Logo.svg" alt="logo da alura">
     </div>
+    <textarea placeholder="Digite ou cole o texto aqui"></textarea>
   </main>
 </body>
 </html>
