--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       <img src="./img/Logo.svg" alt="logo da alura">
     </div>
     <textarea placeholder="Digite ou cole o texto aqui"></textarea>
+    <div class="button-container">
+      <button class="encrypt">Criptografar</button>
+      <button class="decrypt">Descriptografar</button>
+    </div>
+    <div class="instructions">
+      <img src="./img/Alert.svg" alt="alert logo">
+      <p>Apenas letras minúsculas e sem acentos</p>
+    </div>
   </main>
 </body>
 </html>
