Adicionado o container de saída ao layout

--- a/index.html
+++ b/index.html
@@ -14,13 +14,20 @@
       <img src="./img/Logo.svg" alt="logo da alura">
     </div>
     <textarea placeholder="Digite ou cole o texto aqui"></textarea>
+    <div class="instructions">
+      <img src="./img/Alert.svg" alt="alert logo">
+      <p>Apenas letras minúsculas e sem acentos</p>
+    </div>
     <div class="button-container">
       <button class="encrypt">Criptografar</button>
       <button class="decrypt">Descriptografar</button>
     </div>
-    <div class="instructions">
-      <img src="./img/Alert.svg" alt="alert logo">
-      <p>Apenas letras minúsculas e sem acentos</p>
+    <div class="output-container">
+        <img src="./img/not-found-img.svg" alt="not found logo">
+      <div>
+        <p><strong>Nenhuma mensagem encontrada</strong></p>
+        <p>Digite um texto que você deseja criptografar ou descriptografar</p>
+      </div>
     </div>
   </main>
 </body>
