--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p>Thiago Miguel da Costa</p>
+    <p>Feito com HTML, CSS, JavaScript e 💚</p>
+  </footer>
 </body>
 </html>
