--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     , initial-scale=1.0">
     <link rel="stylesheet" href="style.css"></link>
     <title>Decodificador de Texto</title>
+    <script src="script.js" defer></script>
 </head>
 <body>
   <main>
@@ -28,6 +29,8 @@
         <p><strong>Nenhuma mensagem encontrada</strong></p>
         <p>Digite um texto que você deseja criptografar ou descriptografar</p>
       </div>
+      <p class="output"></p>
+      <button class="copy">Copiar</button>
     </div>
   </main>
   <footer>
