--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="logo-container">
       <img src="./img/Logo.svg" alt="logo da alura">
     </div>
-    <textarea placeholder="Digite ou cole o texto aqui"></textarea>
+    <textarea class="input" placeholder="Digite ou cole o texto aqui"></textarea>
     <div class="instructions">
       <img src="./img/Alert.svg" alt="alert logo">
       <p>Apenas letras minúsculas e sem acentos</p>
@@ -24,8 +24,10 @@
       <button class="decrypt">Descriptografar</button>
     </div>
     <div class="output-container">
+      <div class="output-img-container">
         <img src="./img/not-found-img.svg" alt="not found logo">
-      <div>
+      </div>
+      <div class="output-instructions">
         <p><strong>Nenhuma mensagem encontrada</strong></p>
         <p>Digite um texto que você deseja criptografar ou descriptografar</p>
       </div>
