Refatorado a seção de output e finalizado a lógica do botão descriptografar.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <p><strong>Nenhuma mensagem encontrada</strong></p>
         <p>Digite um texto que você deseja criptografar ou descriptografar</p>
       </div>
-      <p class="output"></p>
+      <div class="output-wrapper">
+        <p class="output"></p>
+      </div>
       <button class="copy">Copiar</button>
     </div>
   </main>
