Realizado a lógica principal do botão copiar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </div>
       <div class="output-wrapper">
         <p class="output"></p>
+        <input class="output-hidden"type="hidden" />
       </div>
       <button class="copy">Copiar</button>
     </div>
