Desenvolvido mensagem tooltip que é mostrada ao usuário ao clicar no botão copiar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
       </div>
       <div class="output-wrapper">
         <p class="output"></p>
-        <input class="output-hidden"type="hidden" />
+        <input class="output-hidden" type="hidden" />
+      </div>
+      <div class="tooltip">
+        <span>Texto Copiado!</span>
       </div>
       <button class="copy">Copiar</button>
     </div>
